--- a/brevets/templates/display.html
+++ b/brevets/templates/display.html
@@ -52,9 +52,9 @@
             </tr>
             {% for controle in controles %}
             <tr class="control">
-               <td><p>{{ controle['km'] * 0.621371 }}</p></td>
-               <td><p>{{ controle['km'] }}</p></td>
-               <td><p>{{ controle['location'] }}</p></td>
+               <td><p>{{ (controle['km']|float) * 0.621371 }}</p></td>
+               <td><p>{{ (controle['km']|float) }}</p></td>
+               <td><p>{{ controle['name'] }}</p></td>
                <td><p>{{ controle['open'] }}</p></td>
                <td><p>{{ controle['close'] }}</p></td>
             {% endfor %}
